--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "type": "module",
   "version": "0.0.1",
   "description": "",
-  "main": "server.js",
+  "main": "express-server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-express": "nodemon express-server.js",
-    "start": "nodemon server.js"
+    "serve": "nodemon express-server.js"
   },
   "author": "Abhishek Bajpai",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "validator": "^13.7.0"
   }
 }
